Finish the Content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="nav-menu" id="nav-menu">
                     <ul class="nav-list">
                         <li>
-                            <a href="#home" class="nav-item nav-item-active"
+                            <a href="#home" class="nav-item"
                                 ><i class="uil uil-estate nav-icon"></i>
                                 Falcon Project
                             </a>
@@ -123,9 +123,11 @@
                             </h4>
                         </div>
                         <div class="section-desc">
-                            Lorem ipsum is placeholder text commonly used in the
-                            graphic, print, and publishing industries for
-                            previewing layouts and visual mockups.
+                            Falcon Talks adalah rangkaian acara dari Falcon
+                            Project 12, yang dimana penyelenggara acara akan
+                            mengundang pembicara-pembicara handal pada bidangnya
+                            untuk membawakan materi serta berdiskusi dengan para
+                            peserta yang mengikuti Falcon Talks ini
                         </div>
                         <a href="" class="falcontalks-btn"
                             >Daftar Falcon Talks</a
@@ -224,7 +226,7 @@
                                 yang memiliki latar belakang programming
                             </div>
                             <a
-                                href="/src/pages/falcon-webdesign.html"
+                                href="/src/pages/falcon-programming.html"
                                 class="competition-item-btn"
                             >
                                 Detail Lomba
@@ -251,7 +253,7 @@
                                 dengan tema tertentu
                             </div>
                             <a
-                                href="/src/pages/falcon-webdesign.html"
+                                href="/src/pages/falcon-businessproposal.html"
                                 class="competition-item-btn"
                             >
                                 Detail Lomba
@@ -276,13 +278,13 @@
                         <div class="timeline-title">
                             <div class="section-title">TIMELINE</div>
                             <div class="section-subtitle">
-                                Tahapan Lomba Falcon Project 12
+                                Timeline Falcon Project 12
                             </div>
                         </div>
                         <div class="section-desc timeline-desc">
-                            Lorem ipsum is placeholder text commonly used in the
-                            graphic, print, and publishing industries for
-                            previewing layouts
+                            Falcon Project 12 akan diadakan mulai dari opening
+                            hingga closing yang diselenggarakan pada tanggal
+                            berikut ini:
                         </div>
                     </div>
                     <div class="timeline-main">
