--- a/src/pages/falcon-businessproposal.html
+++ b/src/pages/falcon-businessproposal.html
@@ -11,7 +11,7 @@
             href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
         />
 
-        <title>Falcon Project 12 | Falcon Web Design Competition</title>
+        <title>Falcon Project 12 | Falcon Business Proposal Competition</title>
     </head>
     <body>
         <header class="header">
@@ -43,32 +43,36 @@
                     <div class="contest-home-data-wrapper">
                         <div class="contest-home-data">
                             <h1 class="contest-home-title">
-                                Falcon Web Design Competition
+                                Falcon Business Proposal Competition
                             </h1>
                             <div class="contest-home-desc-wrapper">
                                 <h4 class="contest-home-subtitle">
                                     Tentang Lomba
                                 </h4>
                                 <p class="contest-home-desc">
-                                    Falcon Web Design merupakan bagian dari
-                                    serangkaian acara Falcon Project 12 yang
-                                    diadakan oleh Fakultas School of Science and
-                                    Technology (SISTech) Universitas Pelita
-                                    Harapan. Peserta ditugaskan untuk
-                                    menciptakan sebuah desain web dengan tema
-                                    tertentu untuk menguji keinovatifan dan
-                                    kreativitas peserta.
+                                    Falcon Business Proposal Competition
+                                    Merupakan ajang kompetisi dimana peserta
+                                    harus mengembangkan ide dalam membuat
+                                    rancangan bisnis dengan tema yang telah
+                                    ditentukan oleh panitia untuk menguji
+                                    kreativitas dan keinovatifan mereka. Peserta
+                                    terdiri dari 2-4 orang per kelompok dari SMA
+                                    dan Universitas.
                                     <br />
                                     <br />
-                                    Falcon Web Design diperuntukkan bagi
-                                    mahasiswa dari berbagai universitas seluruh
-                                    Indonesia dan bersifat kelompok yang terdiri
-                                    dari 3 orang. Peserta akan mengirimkan hasil
-                                    desain web. 10 desain terbaik akan diundang
-                                    ke tahap final untuk membuat desain website
-                                    dengan tema yang sudah ditentukan panitia
-                                    secara on-site di lokasi UPH (Universitas
-                                    Pelita Harapan).
+                                    Tahap penyisihan dilakukan secara online.
+                                    Peserta akan mempersiapkan proposal ide
+                                    sesuai dengan tema yang telah ditentukan
+                                    oleh panitia lalu hasilnya dikirimkan
+                                    melalui email. Pada tahap seleksi, juri akan
+                                    memilih ½ dari tim yang telah mendaftar pada
+                                    kategori SMA dan Universitas dengan ide
+                                    terbaik. Peserta yang masuk tahap final yang
+                                    diselengarakan secara on-site di lokasi UPH
+                                    (Universitas Pelita Harapan) akan
+                                    mempresentasikan ide dan prototypenya
+                                    tentang produk yang dirancang di hadapan
+                                    para juri yang berperan sebagai Investor.
                                 </p>
                             </div>
                             <div class="contest-home-btns">
@@ -161,14 +165,15 @@
                         <div class="registration-title-wrapper">
                             <h4 class="section-title">REGISTRATION</h4>
                             <h2 class="section-subtitle">
-                                Pendaftaran Lomba Falcon Web Design Competition
+                                Pendaftaran Lomba Falcon Business Proposal
+                                Competition
                             </h2>
                         </div>
                         <p class="section-desc">
                             Adapun rincian harga pendaftaran dari lomba
-                            <b><i>Falcon Web Design Competition</i></b> yang
-                            dimulai dari harga Early Bird, setelah ditutup akan
-                            dibuka harga normal, sebagai berikut ini:
+                            <b><i>Falcon Business Proposal Competition</i></b>
+                            yang dimulai dari harga Early Bird, setelah ditutup
+                            akan dibuka harga normal, sebagai berikut ini:
                         </p>
                     </div>
 
@@ -225,7 +230,7 @@
                                 </div>
                                 <div class="prizepool-prize-wrapper">
                                     <h2 class="prizepool-prize text-price-dark">
-                                        Rp.2.500.000,-
+                                        Rp.3.000.000,-
                                     </h2>
                                 </div>
                             </div>
@@ -241,7 +246,7 @@
                                     <h2
                                         class="prizepool-prize text-price-light"
                                     >
-                                        Rp.1.500.000,-
+                                        Rp.2.000.000,-
                                     </h2>
                                 </div>
                             </div>
