--- a/src/pages/falcon-logic.html
+++ b/src/pages/falcon-logic.html
@@ -4,8 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="stylesheet" href="/src/css/style.css" />
-        <link rel="stylesheet" href="/src/css/style-contest.css" />
+        <link rel="stylesheet" href="../../src/css/style.css" />
 
         <link
             rel="stylesheet"
@@ -18,11 +17,16 @@
         <header class="header">
             <nav class="nav container">
                 <a href="" class="nav-logo">
-                    <img src="/assets/img/Logo.png" class="logo-img" alt=""
+                    <img
+                        src="../../assets/svg/logo-fp12.svg"
+                        class="logo-img"
+                        alt=""
                 /></a>
 
                 <div class="nav-btns">
-                    <a href="../../index.html" class="join-btn">Home</a>
+                    <a href="../../index.html#competition" class="join-btn"
+                        >Home</a
+                    >
                     <div class="nav-toggle" id="nav-toggle">
                         <i class="uil uil-apps"></i>
                     </div>
@@ -47,7 +51,7 @@
                                 </h4>
                                 <p class="contest-home-desc">
                                     Falcon Logic Competition merupakan bagian
-                                    dari rangkaian acara Falcon Project 10 yang
+                                    dari rangkaian acara Falcon Project 12 yang
                                     diadakan oleh Fakultas School of Science and
                                     Technology (SISTech) Universitas Pelita
                                     Harapan. Falcon Logic Competition bertujuan
@@ -67,10 +71,10 @@
                                     siswa/siswi SMA, SMK, dan sederajat seluruh
                                     Indonesia dan bersifat individu. Peserta
                                     akan mengikuti penyisihan secara online dan
-                                    40% peserta dengan skor teratas saat
-                                    penyisihan akan diundang ke tahap
-                                    selanjutnya yang akan diselenggarakan secara
-                                    online.
+                                    peserta yang lolos dari tahap penyisihan
+                                    akan diundang ke tahap selanjutnya yang akan
+                                    diselenggarakan secara on-site di lokasi UPH
+                                    (Universitas Pelita Harapan).
                                 </p>
                             </div>
                             <div class="contest-home-btns">
@@ -86,7 +90,7 @@
                         </div>
                         <div class="contest-home-cover">
                             <img
-                                src="/assets/img/Logo Lomba/Falcon Logic.png"
+                                src="../../assets/img/Logo Lomba/Falcon Logic.png"
                                 alt=""
                             />
                         </div>
@@ -104,9 +108,10 @@
                             </div>
                         </div>
                         <div class="section-desc timeline-desc">
-                            Lorem ipsum is placeholder text commonly used in the
-                            graphic, print, and publishing industries for
-                            previewing layouts
+                            Tahapan Lomba Falcon Project 12 terdiri dari
+                            pendaftaran, Babak Penyisian, dan Babak Final
+                            (on-site), dan diselengarakan pada waktu yang telah
+                            ditentukan, sebagai berikut:
                         </div>
                     </div>
                     <div class="timeline-main">
@@ -122,7 +127,7 @@
                         </div>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
-                                Pendaftaran(Normal Bird)
+                                Pendaftaran(Normal)
                             </h4>
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
@@ -131,7 +136,7 @@
                         </div>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
-                                Babak Penyisihan
+                                Babak Benyisihan (online)
                             </h4>
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
@@ -141,7 +146,9 @@
                             </div>
                         </div>
                         <div class="timeline-item">
-                            <h4 class="timeline-item-title">Babak Final</h4>
+                            <h4 class="timeline-item-title">
+                                Babak Final (on-site)
+                            </h4>
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
@@ -160,13 +167,14 @@
                         <div class="registration-title-wrapper">
                             <h4 class="section-title">REGISTRATION</h4>
                             <h2 class="section-subtitle">
-                                Pendaftaran Lomba Web Design
+                                Pendaftaran Lomba Falcon Logic Competition
                             </h2>
                         </div>
                         <p class="section-desc">
-                            Lorem ipsum is placeholder text commonly used in the
-                            graphic, print, and publishing industries for
-                            previewing layouts and visual mockups.
+                            Adapun rincian harga pendaftaran dari lomba
+                            <b><i>Falcon Logic Competition</i></b> yang dimulai
+                            dari harga Early Bird, setelah ditutup akan dibuka
+                            harga normal, sebagai berikut ini:
                         </p>
                     </div>
 
@@ -174,16 +182,14 @@
                         <div class="registration-prize-wrapper">
                             <p class="registration-prize-title">Early Bird :</p>
                             <h2 class="registration-prize-prize">
-                                Rp.125.000,-
+                                Rp.60.000,-
                             </h2>
                         </div>
                         <div class="registration-prize-line"></div>
                         <div class="registration-prize-wrapper">
-                            <p class="registration-prize-title">
-                                Normal Bird :
-                            </p>
+                            <p class="registration-prize-title">Normal :</p>
                             <h2 class="registration-prize-prize">
-                                Rp.155.000,-
+                                Rp.80.000,-
                             </h2>
                         </div>
                     </div>
@@ -211,7 +217,7 @@
                                 </div>
                                 <div class="prizepool-prize-wrapper">
                                     <h2 class="prizepool-prize text-price-dark">
-                                        Rp.4.000.000,-
+                                        Rp.3.000.000,-
                                     </h2>
                                 </div>
                             </div>
@@ -250,64 +256,6 @@
                 </div>
             </div>
 
-            <!-- =================================== Falcon F A Q =================================== -->
-            <div class="section faq section-gap" id="faq">
-                <div class="container faq-content box-container-second">
-                    <div class="faq-data">
-                        <div class="faq-title">
-                            <div class="section-title">F.A.Q</div>
-                            <div class="section-subtitle">
-                                Frequently Asked Question
-                            </div>
-                        </div>
-                    </div>
-                    <div class="faq-main">
-                        <div class="faq-item">
-                            <p class="faq-question">
-                                Media apa yang akan digunakan saat lomba?
-                            </p>
-                            <div class="faq-answer-wrapper">
-                                <p class="faq-answer">
-                                    Media yang akan digunakan berupa video
-                                    conferance, ketentuan lebih lanjut akan
-                                    dijelaskan pada Technical Meeting dan
-                                    Guidebook.
-                                </p>
-                            </div>
-                        </div>
-
-                        <div class="faq-item">
-                            <p class="faq-question">
-                                Bagaimana cara pemberian reward pada pemenang
-                                lomba yang berada diluar daerah?
-                            </p>
-                            <div class="faq-answer-wrapper">
-                                <p class="faq-answer">
-                                    Media yang akan digunakan berupa video
-                                    conferance, ketentuan lebih lanjut akan
-                                    dijelaskan pada Technical Meeting dan
-                                    Guidebook.
-                                </p>
-                            </div>
-                        </div>
-
-                        <div class="faq-item">
-                            <p class="faq-question">
-                                Media apa yang akan digunakan saat lomba?
-                            </p>
-                            <div class="faq-answer-wrapper">
-                                <p class="faq-answer">
-                                    Media yang akan digunakan berupa video
-                                    conferance, ketentuan lebih lanjut akan
-                                    dijelaskan pada Technical Meeting dan
-                                    Guidebook.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
             <!-- =================================== Falcon Sponsor =================================== -->
             <div class="section sponsor section-gap">
                 <div class="container sponsor-content box-container-second">
@@ -323,41 +271,44 @@
                     </div>
                     <div class="sponsor-main">
                         <div class="sponsor-item">
-                            <img src="/assets/img/Logo HMP/HMFH.png" alt="" />
-                        </div>
-                        <div class="sponsor-item">
                             <img
-                                src="/assets/img/Logo HMP/HMPS_INFORMATIKA 1.png"
+                                src="../../assets/img/Logo HMP/HMFH.png"
                                 alt=""
                             />
                         </div>
                         <div class="sponsor-item">
                             <img
-                                src="/assets/img/Logo HMP/HMPS_Pendidikan Ekonomi 1.png"
+                                src="../../assets/img/Logo HMP/HMPS_INFORMATIKA 1.png"
                                 alt=""
                             />
                         </div>
                         <div class="sponsor-item">
                             <img
-                                src="/assets/img/Logo HMP/HMPS_MatematikaTerapan 1.png"
+                                src="../../assets/img/Logo HMP/HMPS_Pendidikan Ekonomi 1.png"
                                 alt=""
                             />
                         </div>
                         <div class="sponsor-item">
                             <img
-                                src="/assets/img/Logo HMP/HMPS_Pendidikan Bahasa Indonesia 1.png"
+                                src="../../assets/img/Logo HMP/HMPS_MatematikaTerapan 1.png"
                                 alt=""
                             />
                         </div>
                         <div class="sponsor-item">
                             <img
-                                src="/assets/img/Logo HMP/HMPS_PGSD[1] 1.png"
+                                src="../../assets/img/Logo HMP/HMPS_Pendidikan Bahasa Indonesia 1.png"
                                 alt=""
                             />
                         </div>
                         <div class="sponsor-item">
                             <img
-                                src="/assets/img/Logo HMP/HMPS_PGSD[1] 1.png"
+                                src="../../assets/img/Logo HMP/HMPS_PGSD[1] 1.png"
+                                alt=""
+                            />
+                        </div>
+                        <div class="sponsor-item">
+                            <img
+                                src="../../assets/img/Logo HMP/HMPS_PGSD[1] 1.png"
                                 alt=""
                             />
                         </div>
@@ -369,7 +320,11 @@
         <footer class="footer">
             <div class="footer-main">
                 <a href="#" class="footer-logo-wrapper">
-                    <img src="assets/img/Logo.png" class="footer-logo" alt="" />
+                    <img
+                        src="../../assets/img/Logo.png"
+                        class="footer-logo"
+                        alt=""
+                    />
                     <h2 class="footer-logo-title">Falcon Project 12</h2>
                 </a>
                 <div class="footer-items">
@@ -419,6 +374,6 @@
             </div>
         </footer>
 
-        <script src="/src/js/main.js"></script>
+        <script src="../../src/js/main.js"></script>
     </body>
 </html>
