--- a/src/pages/falcon-programming.html
+++ b/src/pages/falcon-programming.html
@@ -11,7 +11,7 @@
             href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
         />
 
-        <title>Falcon Project 12 | Falcon Web Design Competition</title>
+        <title>Falcon Project 12 | Falcon Programming Competition</title>
     </head>
     <body>
         <header class="header">
@@ -43,32 +43,38 @@
                     <div class="contest-home-data-wrapper">
                         <div class="contest-home-data">
                             <h1 class="contest-home-title">
-                                Falcon Web Design Competition
+                                Falcon Programming Competition
                             </h1>
                             <div class="contest-home-desc-wrapper">
                                 <h4 class="contest-home-subtitle">
                                     Tentang Lomba
                                 </h4>
                                 <p class="contest-home-desc">
-                                    Falcon Web Design merupakan bagian dari
-                                    serangkaian acara Falcon Project 12 yang
-                                    diadakan oleh Fakultas School of Science and
-                                    Technology (SISTech) Universitas Pelita
-                                    Harapan. Peserta ditugaskan untuk
-                                    menciptakan sebuah desain web dengan tema
-                                    tertentu untuk menguji keinovatifan dan
-                                    kreativitas peserta.
+                                    Falcon Programming adalah ajang kompetisi
+                                    programming yang merupakan bagian dari
+                                    serangkaian acara/kompetisi Falcon Project
+                                    12 yang diadakan oleh Fakultas School of
+                                    Science and Technology (SISTech) Universitas
+                                    Pelita Harapan. Falcon Programming bertujuan
+                                    menguji kemampuan berpikir dan pemecahan
+                                    masalah peserta, serta menjadi wadah
+                                    kompetisi untuk berbagai mahasiswa yang
+                                    memiliki latar belakang programming. Logika
+                                    serta cara pikir dari peserta lomba akan
+                                    diuji melalui serangkaian soal yang
+                                    diberikan oleh panitia Falcon Project 12.
                                     <br />
                                     <br />
-                                    Falcon Web Design diperuntukkan bagi
-                                    mahasiswa dari berbagai universitas seluruh
-                                    Indonesia dan bersifat kelompok yang terdiri
-                                    dari 3 orang. Peserta akan mengirimkan hasil
-                                    desain web. 10 desain terbaik akan diundang
-                                    ke tahap final untuk membuat desain website
-                                    dengan tema yang sudah ditentukan panitia
-                                    secara on-site di lokasi UPH (Universitas
-                                    Pelita Harapan).
+                                    Peserta harus menganalisa dan menyelesaikan
+                                    soal yang telah diberikan menggunakan bahasa
+                                    pemrograman Pascal, C/C++, Java, dan Python.
+                                    Peserta juga harus memperhatikan jumlah
+                                    memori serta batas waktu yang diberikan
+                                    untuk setiap soal. Peserta yang lolos pada
+                                    tahap penyisian yang diselengarakan secara
+                                    online akan lanjut ke tahap selanjutnya yang
+                                    akan diselengarakan secara on-site di lokasi
+                                    UPH (Universitas Pelita Harapan).
                                 </p>
                             </div>
                             <div class="contest-home-btns">
@@ -161,12 +167,12 @@
                         <div class="registration-title-wrapper">
                             <h4 class="section-title">REGISTRATION</h4>
                             <h2 class="section-subtitle">
-                                Pendaftaran Lomba Falcon Web Design Competition
+                                Pendaftaran Lomba Falcon Programming Competition
                             </h2>
                         </div>
                         <p class="section-desc">
                             Adapun rincian harga pendaftaran dari lomba
-                            <b><i>Falcon Web Design Competition</i></b> yang
+                            <b><i>Falcon Programming Competition</i></b> yang
                             dimulai dari harga Early Bird, setelah ditutup akan
                             dibuka harga normal, sebagai berikut ini:
                         </p>
@@ -176,14 +182,14 @@
                         <div class="registration-prize-wrapper">
                             <p class="registration-prize-title">Early Bird :</p>
                             <h2 class="registration-prize-prize">
-                                Rp.125.000,-
+                                Rp.60.000,-
                             </h2>
                         </div>
                         <div class="registration-prize-line"></div>
                         <div class="registration-prize-wrapper">
                             <p class="registration-prize-title">Normal :</p>
                             <h2 class="registration-prize-prize">
-                                Rp.155.000,-
+                                Rp.80.000,-
                             </h2>
                         </div>
                     </div>
