--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         </div>
                         <div class="home-img">
                             <img
-                                src="/assets/img/Logo.png"
+                                src="assets/img/Logo.png"
                                 class="home-image"
                                 alt=""
                             />
@@ -90,17 +90,7 @@
                                 >Daftar Sekarang
                                 <i class="uil uil-import join-icon"></i
                             ></a>
-                            <!-- <a href="#falcontalks" class="scroll-down"
-                                ><i
-                                    class="uil uil-mouse-alt scroll-down-btn"
-                                ></i
-                                >Scroll Down<i
-                                    class="uil uil-arrow-down scroll-down-arrow"
-                                ></i
-                            ></a> -->
                         </div>
-                        <!-- <div class="home-data">
-                        </div> -->
                     </div>
                 </div>
             </section>
@@ -110,7 +100,7 @@
                 <div class="container falcontalks-content">
                     <div class="falcontalks-img">
                         <img
-                            src="/assets/img/Coming Soon FP 12 Banner.png"
+                            src="assets/img/Coming Soon FP 12 Banner.png"
                             class="falcontalks-image"
                             alt=""
                         />
@@ -172,7 +162,7 @@
                                 dan kreativitas yang dimiliki peserta
                             </div>
                             <a
-                                href="/src/pages/falcon-webdesign.html"
+                                href="src/pages/falcon-webdesign.html"
                                 class="competition-item-btn"
                             >
                                 Detail Lomba
@@ -199,7 +189,7 @@
                                 SMA atau sederajat dalam berlogika
                             </div>
                             <a
-                                href="/src/pages/falcon-logic.html"
+                                href="src/pages/falcon-logic.html"
                                 class="competition-item-btn"
                             >
                                 Detail Lomba
@@ -226,7 +216,7 @@
                                 yang memiliki latar belakang programming
                             </div>
                             <a
-                                href="/src/pages/falcon-programming.html"
+                                href="src/pages/falcon-programming.html"
                                 class="competition-item-btn"
                             >
                                 Detail Lomba
@@ -253,7 +243,7 @@
                                 dengan tema tertentu
                             </div>
                             <a
-                                href="/src/pages/falcon-businessproposal.html"
+                                href="src/pages/falcon-businessproposal.html"
                                 class="competition-item-btn"
                             >
                                 Detail Lomba
@@ -396,41 +386,41 @@
                     </div>
                     <div class="sponsor-main">
                         <div class="sponsor-item">
-                            <img src="/assets/img/Logo HMP/HMFH.png" alt="" />
+                            <img src="assets/img/Logo HMP/HMFH.png" alt="" />
                         </div>
                         <div class="sponsor-item">
                             <img
-                                src="/assets/img/Logo HMP/HMPS_INFORMATIKA 1.png"
+                                src="assets/img/Logo HMP/HMPS_INFORMATIKA 1.png"
                                 alt=""
                             />
                         </div>
                         <div class="sponsor-item">
                             <img
-                                src="/assets/img/Logo HMP/HMPS_Pendidikan Ekonomi 1.png"
+                                src="assets/img/Logo HMP/HMPS_Pendidikan Ekonomi 1.png"
                                 alt=""
                             />
                         </div>
                         <div class="sponsor-item">
                             <img
-                                src="/assets/img/Logo HMP/HMPS_MatematikaTerapan 1.png"
+                                src="assets/img/Logo HMP/HMPS_MatematikaTerapan 1.png"
                                 alt=""
                             />
                         </div>
                         <div class="sponsor-item">
                             <img
-                                src="/assets/img/Logo HMP/HMPS_Pendidikan Bahasa Indonesia 1.png"
+                                src="assets/img/Logo HMP/HMPS_Pendidikan Bahasa Indonesia 1.png"
                                 alt=""
                             />
                         </div>
                         <div class="sponsor-item">
                             <img
-                                src="/assets/img/Logo HMP/HMPS_PGSD[1] 1.png"
+                                src="assets/img/Logo HMP/HMPS_PGSD[1] 1.png"
                                 alt=""
                             />
                         </div>
                         <div class="sponsor-item">
                             <img
-                                src="/assets/img/Logo HMP/HMPS_PGSD[1] 1.png"
+                                src="assets/img/Logo HMP/HMPS_PGSD[1] 1.png"
                                 alt=""
                             />
                         </div>
